This patch organises the fastboot code in order to re-use the same code for OMAP3 and OMAP4.
The patch removes the fastboot code from cpu/omap3 and cpu/omap4
directories and adds the same under drivers directory so
that it can be used by both OMAP3 and OMAP4.

The major changes introduced by this patch is summarised below.

(1)Remove code from cpu/omap4/fastboot.c
(2)Add fastboot code to drivers/fastboot.c
(3)Remove code from cpu/omap3/fastboot.c
(4)Remove compilation of fastboot from cpu/omap3/Makefile
(5)Remove compilation of fastboot from cpu/omap4/Makefile
(6)Add compilation of fastboot in drivers/Makefile
(7)Add file drivers/musb_regs.h
(8)Remove file include/asm-arm/arch-omap3/musb_regs.h
(9)Remove file include/asm-arm/arch-omap4/musb_regs.h
(10)Add a new file drivers/usbomap.h (combine from usb34xx.h / usb44xx.h)
(11)Remove file include/asm-arm/arch-omap3/usb34xx.h
(12)Remove include/asm-arm/arch-omap4/usb44xx.h
(13)Remove file cpu/omap3/usb_debug_macros.h
(14)Remove file cpu/omap4/usb_debug_macros.h
(15)Add file drivers/usb_debug_macros.h

Signed-off-by: Maulik Mankad <x0082077@ti.com>

--- a/cpu/omap4/Makefile
+++ b/cpu/omap4/Makefile
@@ -27,7 +27,7 @@ include $(TOPDIR)/config.mk
 LIB	= lib$(CPU).a
 
 START	= start.o
-OBJS	= interrupts.o cpu.o fastboot.o mmc.o
+OBJS	= interrupts.o cpu.o mmc.o
 
 all:	.depend $(START) $(LIB)
 
