Thermal shutdown initialization
The Patch does the following things:
1) Turns on the fclk of the thernak sensor
2) Sets the TSHUT thresholds.
3) Enables continuous mode and configures the counter.

Signed-off-by: J Keerthy <j-keerthy@ti.com>

--- a/arch/arm/cpu/armv7/omap5/Makefile
+++ b/arch/arm/cpu/armv7/omap5/Makefile
@@ -29,6 +29,7 @@ COBJS	+= hwinit.o
 COBJS	+= clocks.o
 COBJS	+= emif.o
 COBJS	+= sdram_elpida.o
+COBJS   += thermal.o
 
 SRCS	:= $(SOBJS:.o=.S) $(COBJS:.o=.c)
 OBJS	:= $(addprefix $(obj),$(COBJS) $(SOBJS))
