omap5: add android config option
Android bootloader should write to emmc.
So provide a new build config: omap5_evm5430_android
that disables the saveenv

Android binaries are flashed to emmc, so saveenv
should not be allowed to write to emmc.

Signed-off-by: Vikram Pandita <vikram.pandita@ti.com>

--- a/boards.cfg
+++ b/boards.cfg
@@ -943,7 +943,8 @@ gr_cpci_ax2000               sparc       leon3       -                   gaisler
 gr_ep2s60                    sparc       leon3       -                   gaisler
 grsim                        sparc       leon3       -                   gaisler
 gr_xc3s_1500                 sparc       leon3       -                   gaisler
-omap5_evm5430                arm         armv7       omap5_evm           ti             omap5
+omap5_evm5430                arm         armv7       omap5_evm           ti             omap5  omap5_evm5430:ENV_IS_IN_MMC
+omap5_evm5430_android        arm         armv7       omap5_evm           ti             omap5  omap5_evm5430:ENV_IS_NOWHERE
 omap5_evm5430_zebu           arm         armv7       omap5_evm           ti             omap5
 omap5_evm5430_virtio         arm         armv7       omap5_evm           ti             omap5
 # Target                     ARCH        CPU         Board name          Vendor	        SoC         Options
